0.1.8 Refactored the Container